--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es mi sitio web sigueme en twitter en PedroRt
+        Hola amigos este es mi sitio web sigueme en twitter en PedroRt
     </p>
 </body>
 </html>
